Flourish facet changes

--- a/flourish/templates/flourish/home.html
+++ b/flourish/templates/flourish/home.html
@@ -199,6 +199,25 @@
         </aside> <!-- col.// -->
     </div>
 
+    <div class="row">
+
+        <aside class="col-sm-4">
+            <div class="card">
+                <article class="card-group-item">
+                    <header class="card-header"><h6 class="title">Flourish Substudies </h6></header>
+                    <div class="filter-content">
+                        <div class="list-group list-group-flush">
+                            <a href="{%url 'flourish_facet:facet_flourish_consent_listboard_url' %}" class="list-group-item">FACET <span
+                                    class="float-right badge badge-light round"></span></a>
+                        </div> 
+                    </div>
+                </article> <!-- card-group-item.// -->
+            </div> <!-- card.// -->
+        </aside> <!-- col.// -->
+
+    </div>
+
+
     <div class="container bg-3 text-center">
         <h3 class="text text-muted">Pre Flourish</h3>
         <h3>
