--- a/flourish/templates/flourish/home.html
+++ b/flourish/templates/flourish/home.html
@@ -207,7 +207,7 @@
                     <header class="card-header"><h6 class="title">Flourish Substudies </h6></header>
                     <div class="filter-content">
                         <div class="list-group list-group-flush">
-                            <a href="{%url 'flourish_facet:facet_flourish_consent_listboard_url' %}" class="list-group-item">FACET <span
+                            <a href="{%url 'flourish_facet:home_url' %}" class="list-group-item">FACET <span
                                     class="float-right badge badge-light round"></span></a>
                         </div> 
                     </div>
