Refactored count and used death reports instead of visits

--- a/flourish/templates/flourish/home.html
+++ b/flourish/templates/flourish/home.html
@@ -163,6 +163,45 @@
                 </p>
             </div>
         </div>
+
+        <div class="col-md-3">
+            <div class="card border-success mx-sm-1 p-3">
+                <div class="card border-success shadow text-success p-3 my-card"><span aria-hidden="true"></span>
+                </div>
+                <div class="text-success text-center mt-3">
+                    <h7>Total Maternal Death Count</h7>
+                </div>
+                <div class="text-success text-center mt-2">
+                    <h1>{{ total_caregivers_deaths }}</h1>
+                </div>
+                <p style="font-size: 14px; font-weight: bold; text-align: center; text-transform: capitalize">
+                    Total maternal death reports
+                </p>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+            <div class="card border-success mx-sm-1 p-3">
+                <div class="card border-success shadow text-success p-3 my-card"><span aria-hidden="true"></span>
+                </div>
+                <div class="text-success text-center mt-3">
+                    <h7>Total Child Death Count</h7>
+                </div>
+                <div class="text-success text-center mt-2">
+                    <h1>{{ total_child_deaths }}</h1>
+                </div>
+                <p style="font-size: 14px; font-weight: bold; text-align: center; text-transform: capitalize">
+                    Total child death reports
+                </p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="row">
+
+    <div class="row w-100 jumbotron">
         <div class="col-md-3">
             <div class="card border-success mx-sm-1 p-3">
                 <div class="card border-success shadow text-success p-3 my-card"><span aria-hidden="true"></span>
@@ -193,12 +232,6 @@
                 </p>
             </div>
         </div>
-    </div>
-</div>
-
-<div class="row">
-
-    <div class="row w-100 jumbotron">
         <div class="col-md-3">
             <div class="card border-info mx-sm-1 p-3">
                 <div class="card border-info shadow text-info p-3 my-card"><span aria-hidden="true"></span></div>
